something was breaking

--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -1,4 +1,5 @@
 ---
+
 /**
  *
  *
@@ -21,6 +22,7 @@
  * @author aFuzzyBear - https://github.com/aFuzzyBear
  *
  */
+
 import { Fragment } from 'astro/internal'
 
 const {
@@ -43,7 +45,7 @@ let listenerString:string = ''
 /** Event fired once before the document is displayed, deferred using `type="module". */
 let listenerOfOnce:string = ''
 
-let importString:string
+let importString
 
 let fetchAPI = `const Fetch = window.fetch`
 
