Minor Cleanup - removed the @import:http && key attrs - cleaned up the Readme

--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -146,7 +146,11 @@ for (const name in attrs) {
 			}
 			importString = importStatements(buffer)
 			delete attrs['@imports']
-		}
+		}else if(name.includes('@import:http') && name.includes('@import:key')){
+				delete attrs['@import:http'] 
+				delete attrs['@import:key'] 
+
+		}	
 	}
 }
 
