--- a/www/xelement/src/components/NavBar/test.astro
+++ b/www/xelement/src/components/NavBar/test.astro
@@ -1,7 +1,7 @@
 ---
 import XElement from 'astro-xelement'
 
-const fadeIn =[
+const fadeIn = [
     { 
         transform: 'translateY(50px)',
         opacity: 0
@@ -12,14 +12,12 @@ const fadeIn =[
     }
 ];
 
-const fadeOut=[
+const fadeOut = [
     {
-        transform: 'translateY(50px)',
-        opacity: 0
+        opacity: 1
     },
     {
-        transform: 'translateY(0)',
-        opacity: 1
+        opacity: 0
     }
 ];
 
@@ -32,8 +30,15 @@ const animationTiming = {
 
 <XElement @is="h1"
   class="text-center text-4xl uppercase font-bold"
-  @animate={fadeIn}
-  @timings={animationTiming}
+  @props={[
+    {fadeOut},
+    {timing:animationTiming}
+  ]}
+  
+  @visible={(event)=> {
+      console.log(event)
+      event.target.animate(prop_0,prop_1.animationTiming)
+  }}
 >
 <slot/>
 </XElement>
