--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -148,32 +148,33 @@ const TestLoadString: string =  `(async function($$,$){$=this;$$=(await import($
             listenerString ?? ``
         }${
             listenerOfOnce ?? ``
-        }}).call(this.previousSibling,this.remove()||this)`
+        }}).call(this.previousSibling,this.remove()||this)
+`
 
 
+const transformer = async (str)=> (await transformWithEsbuild(str,`Onload.ts`,{minify: true})).code 
 
-const memoizedTransformer = () =>{
-	const cache = {}	
-	return async(str,key)=>{
-		console.log(str,key)
-		const transformer = async (str)=> (await transformWithEsbuild(str,`Onload.ts`,{minify: true})).code 
 
-		if(key in cache){
-			console.log('Fetching from Console')
-			return cache[key]
-		}
-		else{
-			console.log('Transfroming String')
-			let transformation = cache[key] = await transformer(str)
-			return transformation
-		}
-	}
+const hash = Object.create(null)
+
+/** Return transformed code, remembering previously transformed code. */
+const memo = async (code: string) => {
+  //NoOp if the code is undefined, 
+  if (code===undefined) return
+  // if the hashmap has the transformed code for this code, return it
+  if (code in hash) return hash[code]
+
+  // otherwise, create the transformed code for this code and assign it to the hashmap
+  hash[code] = await transformer(code)
+
+  // and return the transformed code
+  return hash[code]
 }
-const getTransformations = memoizedTransformer()
+
 
 const onLoadString: string = (
     listenerString || listenerOfOnce
-        ? (await getTransformations(TestLoadString,XID))
+        ? (await memo(TestLoadString))
     : null
 )
 
