--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -140,9 +140,7 @@ for (const name in attrs) {
 }
 
 
-
-
-const TestLoadString: string =  `(async function($$,$){$=this;$$=(await import($$.src)).default;${
+const LoadString: string =  `(async function($$,$){$=this;$$=(await import($$.src)).default;${
             propsString ?? ``
         }${
             listenerString ?? ``
@@ -151,30 +149,29 @@ const TestLoadString: string =  `(async function($$,$){$=this;$$=(await import($
         }}).call(this.previousSibling,this.remove()||this)
 `
 
+/** Transforms the JS/TS input using ESBuild */
+const transformer = async (code:string):Promise<string>=> (await transformWithEsbuild(code,`xelement.ts`,{minify: true})).code 
 
-const transformer = async (str)=> (await transformWithEsbuild(str,`Onload.ts`,{minify: true})).code 
-
-
+/** Create a hashmap to store the transformed code */
 const hash = Object.create(null)
 
 /** Return transformed code, remembering previously transformed code. */
 const memo = async (code: string) => {
   //NoOp if the code is undefined, 
-  if (code===undefined) return
+  if (code === undefined) return
   // if the hashmap has the transformed code for this code, return it
   if (code in hash) return hash[code]
 
-  // otherwise, create the transformed code for this code and assign it to the hashmap
+  // otherwise, the transform code and assign it to the hashmap
   hash[code] = await transformer(code)
 
   // and return the transformed code
   return hash[code]
 }
 
-
 const onLoadString: string = (
     listenerString || listenerOfOnce
-        ? (await memo(TestLoadString))
+        ? (await memo(LoadString))
     : null
 )
 
