--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -1,5 +1,9 @@
 ---
 import { Fragment } from 'astro/internal'
+import {createRequire} from 'node:module'
+
+const require = createRequire(import.meta.url)
+const {transformWithEsbuild} = require('vite')
 
 const {
 	'@is': tag = null,
@@ -167,6 +171,41 @@ for (const name in attrs) {
 		delete attrs['define:vars']
 	}
 }
+
+const ParseLoadString: string = `
+	(async function($$,$){$=this;$$=(await import($$.src)).default;${
+			defineVarsString ?? ``
+		}${
+			listenerString ?? ``
+		}${
+			listenerOfOnce ?? ``
+		}}).call(this.previousSibling,this.remove()||this)
+`
+/** Transforms the JS/TS input using ESBuild */
+const transformer = async (code:string):Promise<string>=> (await transformWithEsbuild(code,`xelement.ts`,{minify: true})).code 
+
+/** Create a hashmap to store the transformed code */
+const hash = Object.create(null)
+
+/** Return transformed code, remembering previously transformed code. */
+const memo = async (code: string) => {
+  //NoOp if the code is undefined, 
+  if (code === undefined) return
+  // if the hashmap has the transformed code for this code, return it
+  if (code in hash) return hash[code]
+
+  // otherwise, the transform code and assign it to the hashmap
+  hash[code] = await transformer(code)
+
+  // and return the transformed code
+  return hash[code]
+}
+
+const onLoadString: string = (
+    listenerString || listenerOfOnce
+        ? (await memo(LoadString))
+    : null
+)
 
 const onLoadString: string = (
 	listenerString || listenerOfOnce
