attempting to get the routes config working

--- a/www/XElement/src/pages/index.astro
+++ b/www/XElement/src/pages/index.astro
@@ -1,22 +1,12 @@
 ---
-	async function getStaticPaths(){
-        let docsFiles = await Astro.fetchContent('../../../../docs/XElement/**/*.md')
-        return docsFiles.map(doc=>({
-                params:{
-                  slug: doc.file.pathname.split('/').splice(8).join('/').replace('.md','')
-                },
-                props:{
-                    doc
-                }
-            }
-		))
-    }
+import Slots from '../components/Slots.astro'
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="stylesheet" href={Astro.resolve('../styles/tailwind.scss')}>
 		<meta name="viewport" content="width=device-width" />
 		<title>Welcome to Astro</title>
 		<style>
@@ -26,6 +16,11 @@
 	</head>
 
 	<body>
-		<h1>Welcome to <a href="https://astro.build/">Astro</a></h1>
+		<h1 class="text-purple-500">Welcome to <a href="https://astro.build/">Astro</a></h1>
+		<Slots>
+			<h1 slot="intro">Intro</h1>
+			<h2 >Default</h2>
+			<h3 slot="outro">Outro</h3>
+		</Slots>
 	</body>
 </html>
